[package]
name = "tg-cron-sender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
log = "0.4"
rand = "0.8"
saffron = "0.1"
simple_logger = "5"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }

grammers-client = { path = "/Users/takaranoao/git/grammers/grammers-client", features = ["proxy"] }
grammers-mtsender = { path = "/Users/takaranoao/git/grammers/grammers-mtsender", features = ["proxy"] }
grammers-session = { path = "/Users/takaranoao/git/grammers/grammers-session" }
grammers-tl-types = { path = "/Users/takaranoao/git/grammers/grammers-tl-types" }

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
webauthn-authenticator-rs = { version = "0.6.0-dev", default-features = false, features = ["usb", "cable", "qrcode"], optional = true }
webauthn-rs-proto = { version = "0.6.0-dev", optional = true }
url = { version = "2", optional = true }

[features]
default = ["passkey-login"]
passkey-login = ["dep:webauthn-authenticator-rs", "dep:webauthn-rs-proto", "dep:serde", "dep:serde_json", "dep:base64", "dep:url"]

[dev-dependencies]
pretty_assertions = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tg-cron-sender"
path = "src/main.rs"
